--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "clean": "rm -rf dist",
     "lint": "eslint test/**/*.{ts,js} src/**/*.{ts,js}",
     "build": "npm run clean && tsc",
-    "test": "mocha -r tsconfig-paths/register -r ts-node/register \"test/**/*.test.ts\""
+    "test": "mocha -r tsconfig-paths/register -r ts-node/register \"test/**/*.test.ts\"",
+    "test:api": "npm run build && mocha -t 5000 --reporter mochawesome --recursive ./dist/test/api/*.js"
   },
   "repository": {
     "type": "git",
