--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,6 @@ dist
 !.vscode/*.code-snippets
 
 # End of https://www.toptal.com/developers/gitignore/api/node,visualstudiocode
+
+#mocha awesome
+mochawesome-report
