--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint": "^8.3.0",
     "http-status-codes": "^2.1.4",
     "mocha": "^9.1.3",
+    "mochawesome": "^7.0.1",
     "superagent": "^6.1.0",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.12.0",
