--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "clean": "rm -rf dist",
     "lint": "eslint test/**/*.{ts,js} src/**/*.{ts,js}",
     "build": "npm run clean && tsc",
-    "test:api": "npm run build && mocha -t 5000 --reporter mochawesome --recursive ./dist/test/api/*.js"
+    "test:api": "npm run build && mocha -t 5000 --reporter mochawesome --recursive ./dist/test/api/*.js",
+    "test:ui": "npm run build && protractor dist/protractor/local.config.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@types/chai": "^4.2.22",
     "@types/mocha": "^9.0.0",
+    "@types/node": "^16.11.12",
     "@types/superagent": "^4.1.13",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
@@ -33,6 +35,8 @@
     "http-status-codes": "^2.1.4",
     "mocha": "^9.1.3",
     "mochawesome": "^7.0.1",
+    "mochawesome-screenshots": "^1.7.3",
+    "protractor": "^7.0.0",
     "superagent": "^6.1.0",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.12.0",
