--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,11 @@
     "moduleResolution": "node",
     "noUnusedParameters": true,
     "noUnusedLocals": true,
-    "baseUrl": "."
+    "baseUrl": ".",
+    "paths": {
+      "test/*": [
+        "test/*"
+      ]
+    }
   }
 }
