--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Final homework tests for Praxis 2021-2",
   "main": "index.js",
   "scripts": {
-    "clean": "rm -rf dist",
+    "clean": "rm -rf dist mochawesome-reports",
     "lint": "eslint test/**/*.{ts,js} src/**/*.{ts,js}",
     "build": "npm run clean && tsc",
-    "test:api": "npm run build && mocha -t 5000 --reporter mochawesome --recursive ./dist/test/api/*.js",
-    "test:ui": "npm run build && protractor dist/protractor/local.config.js"
+    "pretest": "npm run build",
+    "test:api": "mocha -t 5000 --reporter mochawesome -r tsconfig-paths/register -r ts-node/register/transpile-only \"test/api/**/*.test.ts\"",
+    "test:ui": "protractor protractor/launcher.js"
   },
   "repository": {
     "type": "git",
@@ -25,8 +26,9 @@
   "homepage": "https://github.com/sesp13/atsea-testing#readme",
   "devDependencies": {
     "@types/chai": "^4.2.22",
+    "@types/chai-json-schema": "^1.4.6",
     "@types/mocha": "^9.0.0",
-    "@types/node": "^16.11.12",
+    "@types/node": "^16.11.11",
     "@types/superagent": "^4.1.13",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
@@ -41,6 +43,5 @@
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.2"
-  },
-  "dependencies": {}
+  }
 }
