--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -59,26 +59,12 @@ jobs:
         aws-region: ${{ env.AWS_REGION }}
     - run: npm ci
 
-    - name: copy file via ssh key
-      uses: appleboy/scp-action@master
-      with:
-        host: ${{ secrets.INSTANCE_PUBLIC_DNS }}
-        username: ${{ secrets.INSTANCE_USERNAME }}
-        key: ${{ secrets.INSTANCE_PRIVATE_KEY }}
-        source: "./docker-compose.yml"
-        target: "/home/${{ secrets.INSTANCE_USERNAME }}/run_selenium"
-    - name: Executing remote ssh commands using key
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.INSTANCE_PUBLIC_DNS }}
-        username: ${{ secrets.INSTANCE_USERNAME }}
-        key: ${{ secrets.INSTANCE_PRIVATE_KEY }}
-        timeout: 60s
-        script: |
-          cd run_selenium
-          docker-compose up -d
+    - name: Excecute docker
+      run: docker-compose up -d
+
     - name: Running UI tests
       run: npm run test:ui
+
     - name: Upload reports to AWS bucket
       run: aws s3 sync ./mochawesome-reports ${{ secrets.AWS_BUCKET }}/ui-tests-report
       if: ${{ always() }}
